--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phan Xuân Bình</title>
+    <title>Home-Phan Xuân Bình</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
@@ -27,13 +27,13 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./Home.html">Home</a>
+                                    <a class="nav-link active nav_home" aria-current="page" href="./Home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./Featured.html">Featured</a>
+                                    <a class="nav-link nav_featured" href="./Featured.html">Featured</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./Posts.html">View Post</a>
+                                    <a class="nav-link nav_post" href="./Posts.html">View Post</a>
                                 </li>
                             </ul>
 
@@ -212,10 +212,10 @@
         </form>
     </section>
 
-    <footer class="container mt-5">
-        <div class="row">
+    <footer class="container bg-light mt-5">
+        <div class="row ">
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -224,7 +224,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -233,7 +233,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -242,7 +242,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
