--- a/Featured.html
+++ b/Featured.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Featured-Phan Xuân Bình</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    
+    <link rel="stylesheet" href="css/style1.css">
 </head>
+
 <body>
     <header class="container-fluid">
         <div class="row">
@@ -25,13 +27,13 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./Home.html">Home</a>
+                                    <a class="nav-link active nav_home" aria-current="page" href="./Home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./Featured.html">Featured</a>
+                                    <a class="nav-link nav_featured" href="./Featured.html">Featured</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./Posts.html">View Post</a>
+                                    <a class="nav-link nav_post" href="./Posts.html">View Post</a>
                                 </li>
                             </ul>
 
@@ -42,18 +44,87 @@
         </div>
     </header>
 
-    <main class="container">
-        
+    <main class="container mt-5">
+        <h1 class="display-6 mb-3">Popular posts</h1>
+        <div class="row">
+            <div class="col-md-4 col-6 mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/img2.jpeg" class="card-img-top img-fluid rounded" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/img3.jpeg" class="card-img-top img-fluid rounded" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/img5.jpeg" class="card-img-top img-fluid rounded" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/img2.jpeg" class="card-img-top img-fluid rounded" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/img3.jpeg" class="card-img-top img-fluid rounded" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-6 mb-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/img5.jpeg" class="card-img-top img-fluid rounded" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </main>
 
 
 
 
 
-    <footer class="container mt-5">
-        <div class="row">
+    <footer class="container bg-light mt-5">
+        <div class="row ">
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -62,7 +133,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -71,7 +142,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -80,7 +151,7 @@
                 </ul>
             </div>
             <div class="col-md">
-                <h4><i class="bi bi-twitter"></i>Footer Item</h4>
+                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
                 <ul class="list-unstyled">
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
                     <li><a class="text-decoration-none link primary" href="#">Item</a></li>
@@ -97,7 +168,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
