--- a/Featured.html
+++ b/Featured.html
@@ -9,11 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="css/featured.css">
 </head>
 
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid fixed-top">
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,10 +27,10 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active nav_home" aria-current="page" href="./Home.html">Home</a>
+                                    <a class="nav-link nav_home" aria-current="page" href="./Home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link nav_featured" href="./Featured.html">Featured</a>
+                                    <a class="nav-link active nav_featured" href="./Featured.html">Featured</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link nav_post" href="./Posts.html">View Post</a>
@@ -44,14 +44,14 @@
         </div>
     </header>
 
-    <main class="container mt-5">
+    <main class="container mt-3 main_fea">
         <h1 class="display-6 mb-3">Popular posts</h1>
         <div class="row">
             <div class="col-md-4 col-6 mb-3">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <img src="img/img2.jpeg" class="card-img-top img-fluid rounded" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h4 class="card-title">Card title</h4>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -59,10 +59,10 @@
                 </div>
             </div>
             <div class="col-md-4 col-6 mb-3">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <img src="img/img3.jpeg" class="card-img-top img-fluid rounded" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h4 class="card-title">Card title</h4>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -70,10 +70,10 @@
                 </div>
             </div>
             <div class="col-md-4 col-6 mb-3">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <img src="img/img5.jpeg" class="card-img-top img-fluid rounded" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h4 class="card-title">Card title</h4>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -81,10 +81,10 @@
                 </div>
             </div>
             <div class="col-md-4 col-6 mb-3">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <img src="img/img2.jpeg" class="card-img-top img-fluid rounded" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h4 class="card-title">Card title</h4>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -92,10 +92,10 @@
                 </div>
             </div>
             <div class="col-md-4 col-6 mb-3">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <img src="img/img3.jpeg" class="card-img-top img-fluid rounded" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h4 class="card-title">Card title</h4>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -103,10 +103,10 @@
                 </div>
             </div>
             <div class="col-md-4 col-6 mb-3">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 100%;">
                     <img src="img/img5.jpeg" class="card-img-top img-fluid rounded" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h4 class="card-title">Card title</h4>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -121,49 +121,51 @@
 
 
 
-    <footer class="container bg-light mt-5">
-        <div class="row ">
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
+    <footer class="container-fluid bg-light mt-5">
+        <div class="container mt-5">
+            <div class="row mt-5 ">
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row mt-3 mb-3">
-            <hr>
-            <div class="col-md text-center text-muted">
-                &copy; PhanXuanBinh 12/2021
+            <div class="row mt-3 mb-3">
+                <hr>
+                <div class="col-md text-center text-muted">
+                    &copy; PhanXuanBinh 12/2021
+                </div>
             </div>
         </div>
     </footer>
