--- a/Home.html
+++ b/Home.html
@@ -9,11 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid fixed-top">
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -30,10 +30,10 @@
                                     <a class="nav-link active nav_home" aria-current="page" href="./Home.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link nav_featured" href="./Featured.html">Featured</a>
+                                    <a class="nav-link  nav_featured" href="./Featured.html">Featured</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link nav_post" href="./Posts.html">View Post</a>
+                                    <a class="nav-link  nav_post" href="./Posts.html">View Post</a>
                                 </li>
                             </ul>
 
@@ -43,15 +43,15 @@
             </div>
         </div>
     </header>
-    <main class="container mt-5">
+    <main class="container mt-5 main_home">
         <div class="main_about row">
-            <h4>Phan Xuân Bình</h4>
+            <h3>Phan Xuân Bình</h3>
             <p>Student-61TH3</p>
             <div class="col-md-6">
                 <img class="img-fluid rounded" src="img/img1.jpeg" alt="">
             </div>
             <div class="col-md-6">
-                <h4>About</h4>
+                <h3>About</h3>
                 <p class="my_about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis ipsum eaque quod
                     reiciendis dolores
                     necessitatibus rem asperiores repellat, ipsa similique iusto deserunt voluptatem eveniet quas
@@ -212,49 +212,51 @@
         </form>
     </section>
 
-    <footer class="container bg-light mt-5">
-        <div class="row ">
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
+    <footer class="container-fluid bg-light mt-5">
+        <div class="container mt-5">
+            <div class="row mt-5 ">
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h5><i class="bi bi-twitter fs-6"></i>Footer Item</h5>
-                <ul class="list-unstyled">
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                    <li><a class="text-decoration-none link primary" href="#">Item</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row mt-3 mb-3">
-            <hr>
-            <div class="col-md text-center text-muted">
-                &copy; PhanXuanBinh 12/2021
+            <div class="row mt-3 mb-3">
+                <hr>
+                <div class="col-md text-center text-muted">
+                    &copy; PhanXuanBinh 12/2021
+                </div>
             </div>
         </div>
     </footer>
