--- a/Posts.html
+++ b/Posts.html
@@ -1,19 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Post-Phan Xuân Bình</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/post.css">
 </head>
+
 <body>
-    
+    <header class="container-fluid fixed-top">
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#"><i class="bi bi-person-circle"></i>Phan Xuân Bình</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link  nav_home" aria-current="page" href="./Home.html">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link  nav_featured" href="./Featured.html">Featured</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active nav_post" href="./Posts.html">View Post</a>
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main class="container-fluid mt-5 mb-3 main_post">
+        <div class="container">
+            <div class="w-100">
+                <span class="badge fs-3 bg-success">New</span>
+                <span class="fs-2 ms-3">Post Example</span>
+                <p class="lead mt-3 text-muted fs-3">Subtitle</p>
+            </div>
+            <div class="row mb-5">
+                <div class="col-md-6">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="img/img5.jpeg" class="d-block w-100 img-fluid" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>First slide label</h5>
+                                    <p>Some representative placeholder content for the first slide.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img5.jpeg" class="d-block w-100 img-fluid" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Second slide label</h5>
+                                    <p>Some representative placeholder content for the second slide.</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/img5.jpeg" class="d-block w-100 img-fluid" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Third slide label</h5>
+                                    <p>Some representative placeholder content for the third slide.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h3 class="display-6">Description</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam numquam magnam placeat voluptatum
+                        distinctio iusto vitae repellat enim, libero et, quis maxime in impedit laborum commodi unde facilis
+                        explicabo eligendi.
+                    </p>
+                    <h3 class="display-6">List</h3>
+                    <ul>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                    </ul>
+                    <h3 class="display-6">Link</h3>
+                    <a href="#">google.com</a>
+                </div>
+                
+            </div>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="main_featured row">
+                <h4 class="mt-3 mb-3">Related Posts</h4>
+                <div class="col-md">
+                    <figure class="figure">
+                        <img src="img/img2.jpeg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-md">
+                    <figure class="figure">
+                        <img src="img/img3.jpeg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-md">
+                    <figure class="figure">
+                        <img src="img/img5.jpeg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+                <div class="col-md">
+                    <figure class="figure">
+                        <img src="img/img6.jpeg" class="figure-img img-fluid rounded" alt="...">
+                        <figcaption class="figure-caption">A caption for the above image.</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+    <footer class="container-fluid bg-light mt-5">
+        <div class="container mt-5">
+            <div class="row mt-5 ">
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+                <div class="col-md mt-5 mb-3">
+                    <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
+                    <ul class="list-unstyled">
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                        <li><a class="text-decoration-none link primary" href="#">Item</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row mt-3 mb-3">
+                <hr>
+                <div class="col-md text-center text-muted">
+                    &copy; PhanXuanBinh 12/2021
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
