--- a/Home.html
+++ b/Home.html
@@ -147,17 +147,16 @@
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <i class="bi bi-arrow-left-circle-fill text-secondary"></i>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <i class="bi bi-arrow-right-circle-fill text-secondary"></i>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-        </button>
+          </button>
     </section>
+    
     <section class="contact container mt-5 mb-5">
         <h4>Contact(Phan Xuân Bình)</h4>
         <form action="">
@@ -213,7 +212,7 @@
     </section>
 
     <footer class="container-fluid bg-light mt-5">
-        <div class="container mt-5">
+        <div class="container ">
             <div class="row mt-5 ">
                 <div class="col-md mt-5 mb-3">
                     <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
@@ -252,9 +251,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="row mt-3 mb-3">
+            <div class="row">
                 <hr>
-                <div class="col-md text-center text-muted">
+                <div class="col-md text-center text-muted mb-3">
                     &copy; PhanXuanBinh 12/2021
                 </div>
             </div>
