--- a/Featured.html
+++ b/Featured.html
@@ -122,7 +122,7 @@
 
 
     <footer class="container-fluid bg-light mt-5">
-        <div class="container mt-5">
+        <div class="container ">
             <div class="row mt-5 ">
                 <div class="col-md mt-5 mb-3">
                     <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
@@ -161,9 +161,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="row mt-3 mb-3">
+            <div class="row">
                 <hr>
-                <div class="col-md text-center text-muted">
+                <div class="col-md text-center text-muted mb-3">
                     &copy; PhanXuanBinh 12/2021
                 </div>
             </div>
