--- a/Posts.html
+++ b/Posts.html
@@ -150,7 +150,7 @@
 
 
     <footer class="container-fluid bg-light mt-5">
-        <div class="container mt-5">
+        <div class="container ">
             <div class="row mt-5 ">
                 <div class="col-md mt-5 mb-3">
                     <h5><i class="bi bi-twitter me-2 fs-6"></i>Footer Item</h5>
@@ -189,15 +189,14 @@
                     </ul>
                 </div>
             </div>
-            <div class="row mt-3 mb-3">
+            <div class="row">
                 <hr>
-                <div class="col-md text-center text-muted">
+                <div class="col-md text-center text-muted mb-3">
                     &copy; PhanXuanBinh 12/2021
                 </div>
             </div>
         </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
